--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -28,3 +28,44 @@
   text-decoration: none;
 }
 */
+body{
+  background-color: #04cae8;
+  color:white;
+}
+
+.container{
+  width:960px;
+  margin: auto;
+}
+.components{
+    width:100%;
+    border-collapse:collapse;
+    border-radius: 10px;
+    box-shadow: 10px 10px 5px #242424;
+  }
+  .components td{
+    padding:7px;
+  }
+  /* provide some minimal visual accomodation for IE8 and below */
+  .components tr{
+    background: #b8d1f3;
+  }
+  /*  Define the background color for all the ODD background rows  */
+  .components tr:nth-child(odd){
+    background: #272727;
+  }
+  /*  Define the background color for all the EVEN background rows  */
+  .components tr:nth-child(even){
+    background: #1c1c1c;
+  }
+
+  .components{
+    color: #585858;
+    font-family: helvetica;
+  }
+
+  .components .heading{
+    color: white;
+  }
+
+
