--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,22 +1,34 @@
 <div class="container">
+
   <h1><%= @recipe.name %></h1>
-  <p>Created by: <%= @recipe.created_by || "Unknown Creator" %><br />
-    Source Environment: <%= @recipe.source_environment_name %><br />
-    Environment ID:<%= @recipe.source_environment_id %>
+  <p>
   </p>
-  <ul>
+  <table class="components">
+    <tr>
+      <td class="heading">Project Name</td>
+      <td class="heading">Release Version</td>
+    </tr>
     <% @recipe.components.each do |component| %>
-      <li><%= component.project_name %> - version: <%= component.release_version %></li>
+    <tr>
+      <td><%= component.project_name %></td>
+      <td><%= component.release_version %></td>
+    </tr>
     <% end %>
-  </ul>
-
-
-  <%= form_for RecipeComponent.new do |f| %>
+    <tr>
+      <td class="heading">  <%= form_for RecipeComponent.new do |f| %>
   <%= f.hidden_field :recipe_id, value: @recipe.id %>
-  <%= f.label :component_id, "component" %>
+  <%= f.label :component_id, "Add Component" %>
   <%= f.select(:component_id, @components_values) %>
   <%= f.submit "add" %>
-  <% end %>
+  <% end %></td>
+      <td class="heading">Created by: <%= @recipe.created_by || "Unknown Creator" %><br />
+    Source Environment: <%= @recipe.source_environment_name %><br />
+    Environment ID:<%= @recipe.source_environment_id %></td>
+    </tr>
+  </table>
+
+
+
 
 
 
