--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,3 +1,5 @@
+<div class="header">
+</div>
 <div class="container">
 
   <h1><%= @recipe.name %></h1>
@@ -18,7 +20,7 @@
       <td class="heading">  <%= form_for RecipeComponent.new do |f| %>
   <%= f.hidden_field :recipe_id, value: @recipe.id %>
   <%= f.label :component_id, "Add Component" %>
-  <%= f.select(:component_id, @components_values) %>
+  <%= f.select(:component_id, @components_values.sort) %>
   <%= f.submit "add" %>
   <% end %></td>
       <td class="heading">Created by: <%= @recipe.created_by || "Unknown Creator" %><br />
@@ -27,10 +29,8 @@
     </tr>
   </table>
 
-
-
-
-
-
-
 </div>
+<script>
+    $(document).ready(function() { $("#recipe_component_component_id").select2(); });
+</script>
+
