--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -30,17 +30,43 @@
 */
 
 body{
-  background-color: #04cae8;
-  color:white;
+  background-color: #f5f3ea;
+  font-family: Helvetica;
+  color:#323232;
     margin:0;
   padding: 0;
 }
 
+h1{
+  padding-bottom: 5px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+a:visited {
+  color: white;
+}
+
+a:hover {
+  color:#b6e026;
+}
+
+a:active {
+  color: white;
+}
+
+
+
 .header{
-  background-color: black;
+  background-color: #3e8bde;
   width: 100%;
   height: 80px;
-  box-shadow:
+  background-image: url('octologo.png');
+  background-repeat: no-repeat;
+  margin-bottom: 50px;
 
 }
 
@@ -63,11 +89,11 @@ body{
   }
   /*  Define the background color for all the ODD background rows  */
   .components tr:nth-child(odd){
-    background: #272727;
+    background: #e5e0ce;
   }
   /*  Define the background color for all the EVEN background rows  */
   .components tr:nth-child(even){
-    background: #1c1c1c;
+    background: #f5f3ea;
   }
 
   .components{
@@ -76,7 +102,47 @@ body{
   }
 
   .components .heading{
-    color: white;
+    color: #3e8bde;
   }
+
+.nav {
+  margin: 0;
+  padding: 0;
+  margin-right: 150px
+}
+
+.nav li{
+  color: white;
+  margin-top: 32px;
+  display: inline-block;
+  float: right;
+  margin-right: 30px;
+}
+
+.add-button{
+  margin-left: 5px;
+border:1px solid #8ED058;-webkit-box-shadow: #474747 0px 0px 5px ;-moz-box-shadow: #474747 0px 0px 5px ; box-shadow: #474747 0px 0px 5px ; -webkit-border-radius: 5px; -moz-border-radius: 5px;border-radius: 5px;font-size:12px;font-family:arial, helvetica, sans-serif; padding: 7px 10px 7px 10px; text-decoration:none; display:inline-block;text-shadow: 0px 1px 0 rgba(255,255,255,0.4);font-weight:bold; color: #4D7D32;
+ background-color: #b6e026; background-image: -webkit-gradient(linear, left top, left bottom, from(#b6e026), to(#abdc28));
+ background-image: -webkit-linear-gradient(top, #b6e026, #abdc28);
+ background-image: -moz-linear-gradient(top, #b6e026, #abdc28);
+ background-image: -ms-linear-gradient(top, #b6e026, #abdc28);
+ background-image: -o-linear-gradient(top, #b6e026, #abdc28);
+ background-image: linear-gradient(to bottom, #b6e026, #abdc28);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#b6e026, endColorstr=#abdc28);
+}
+
+.add-button :hover{
+ border:1px solid #8ED058;
+ background-color: #95b91a; background-image: -webkit-gradient(linear, left top, left bottom, from(#95b91a), to(#8bb41d));
+ background-image: -webkit-linear-gradient(top, #95b91a, #8bb41d);
+ background-image: -moz-linear-gradient(top, #95b91a, #8bb41d);
+ background-image: -ms-linear-gradient(top, #95b91a, #8bb41d);
+ background-image: -o-linear-gradient(top, #95b91a, #8bb41d);
+ background-image: linear-gradient(to bottom, #95b91a, #8bb41d);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#95b91a, endColorstr=#8bb41d);
+}
+
+
+
+
+
 
 
