--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,3 +1,10 @@
+<div class="header">
+  <ul class="nav">
+    <li><%= link_to("Octopus Deploy", "https://octopusdeploy.com/") %></li>
+    <li><%= link_to("Create Recipe", new_recipe_path) %></li>
+    <li><%= link_to("Home", root_url) %></li>
+  </ul>
+</div>
 <div class="container">
   <h1>Current Recipes</h1>
   <ul>
