--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,3 +1,10 @@
+<div class="header">
+  <ul class="nav">
+    <li><%= link_to("Octopus Deploy", "https://octopusdeploy.com/") %></li>
+    <li><%= link_to("Create Recipe", new_recipe_path) %></li>
+    <li><%= link_to("Home", root_url) %></li>
+  </ul>
+</div>
 <%= form_for @recipe, url: {action: "create"}, html: {class:"nifty_form"} do |f| %>
   <%= f.label :name, "Recipe Name" %><br />
   <%= f.text_field :name %> <br />
