--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,3 +1,4 @@
+<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 <div class="header">
   <ul class="nav">
     <li><%= link_to("Octopus Deploy", "https://octopusdeploy.com/") %></li>
@@ -15,6 +16,7 @@
     </tr>
     <% end %>
   </table>
-  <button type="button" class="add-button"><a href="/newrecipe">Create New Recipe</a></button>
-
+  <div class="button">
+    <button type="button" class="add-button"><a href="/newrecipe">Create New Recipe</a></button>
+  </div>
 </div>
